# Deep-Learning-HPC-DEMO

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  client.py  demo.py  demo_advanced.py  demo_deployment.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yaml  ci.yml
benchmarks/: generate_report.py  run_benchmarks.py
config/: deepspeed_config.json  flax_config.yaml  ray_config.yaml  serve_config.yaml  torch_config.yaml  train_config.yaml
docs/: index.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: deployment.yaml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
notebooks/: demo_experiments.ipynb
src/: __init__.py  registry.py
src/deployment/: serve_ray.py
src/models/: flax_cnn.py  flax_mlp.py  torch_deepspeed_cnn.py  torch_deepspeed_mlp.py
src/optimizers/: optax_utils.py  torch_optimizers.py
src/training/: callbacks.py  train_flax.py  train_hpc.py  train_torch.py
src/utils/: dataset.py
tests/: conftest.py  test_flax.py  test_flax_advanced.py  test_registry.py  test_serve_ray.py  test_training.py
tests/deployment/: test_serve_ray.py
tests/optimizers/: test_optimizers.py
tests/performance/: locustfile.py
tests/training/: test_training.py
tests/utils/: test_dataset.py
